# SecondProject

./: CMakeLists.txt  ProjectsJS24.depend  README.md  main.cpp  mylib.h  stud.cpp  stud.h  test.cpp
